--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
 
 
 
-    <section class="resume">
+    <!-- <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
             <div class="title title__fz36 title__section-subtitle">Чем я буду полезна</div>
@@ -286,11 +286,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
-    <section class="skills">
+    <!-- <section class="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
             <div class="title title__fz36 title__section-subtitle">Что я использую в работе</div>
@@ -404,14 +404,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
     <!-- Секция портфолио -->
 
 
-    <section class="portfolio">
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title__fz36 title__section-subtitle">Мои работы</div>
@@ -530,7 +530,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <script src="js/script.js"></script>
 </body>
 </html>
