--- a/src/index.html
+++ b/src/index.html
@@ -220,10 +220,10 @@
 
 
 
-    <!-- <section class="resume">
+    <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
-            <div class="title title__fz36 title__section-subtitle">Чем я буду полезна</div>
+            <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
             <div class="divider"></div>
             <div class="resume__wrapper">
                 <div class="resume__column">
@@ -286,14 +286,14 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
-    <!-- <section class="skills">
+    <section class="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
-            <div class="title title__fz36 title__section-subtitle">Что я использую в работе</div>
+            <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
             <div class="divider"></div>
 
             <div class="skills__wrapper">
@@ -404,7 +404,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
@@ -414,7 +414,7 @@
     <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
-            <div class="title title__fz36 title__section-subtitle">Мои работы</div>
+            <div class="title title_fz36 title__section-subtitle">Мои работы</div>
             <div class="divider"></div>
 
             <div class="portfolio__wrapper">
