--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
     <!-- Секция портфолио -->
 
 
-    <!-- <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
@@ -440,7 +440,6 @@
         </div>
     </section>
 
-    
     <section class="price">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
@@ -479,7 +478,7 @@
             </div>
         </div>
     </section>
-
+<!--
     <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
