--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,16 @@
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
-                    <img src="img/main_photo.jpg" alt="photo">
+                    <img srcset="img/main_photo-min.jpg 300w,
+                                img/main_photo.jpg 400w"
+                        sizes="(max-width: 576px) 280px,
+                                (min-width: 577px) 400px"
+                    src="img/main_photo.jpg" alt="photo">
+                    <!-- <picture>
+                        <source media="(max-width: 576px)" srcset="img/main_photo-min.jpg">
+                        <source media="(min-width: 577px)" srcset="img/main_photo.jpg">
+                            <img src="img/main_photo.jpg" alt="photo">
+                    </picture> -->
                 </div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">Про меня</h2>
@@ -478,7 +487,7 @@
             </div>
         </div>
     </section>
-<!--
+
     <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
@@ -529,7 +538,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
